# Windows-Toasts

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  main.yml  run-tests.yml
docs/: advanced_usage.rst  conf.py  custom_aumid.rst  getting_started.rst  index.rst  interactable.rst  migration.rst  requirements.txt  solving.rst
docs/dev/: metadata.rst  toast_document.rst
docs/user/: audio.rst  exceptions.rst  toast.rst  toast_types.rst  toasters.rst  wrappers.rst
scripts/: create_shell_link.py  publish_gh_release_notes.py  register_hkey_aumi.py  register_hkey_aumid.py
src/scripts/: create_shell_link.py  publish_gh_release_notes.py  register_hkey_aumi.py
src/windows_toasts/: __init__.py  __init__.pyi  _version.py  events.py  events.pyi  exceptions.py  toast.py  toast_audio.py  toast_audio.pyi  toast_document.py  toast_document.pyi  toast_types.py  toast_types.pyi  toasters.py  windows_toasts.py  windows_toasts.pyi  wrappers.py
tests/: conftest.py  test_aumi.py  test_aumid.py  test_import.py  test_toasts.py
