[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 120
target_version = ["py38", "py39", "py310", "py311"]
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
exclude = ["build/", "main.py"]