[metadata]
name = windows-toasts
version = 0.1.3
author = DatGuy
author_email = datguysteam@gmail.com
description = Windows toast notifications sender
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DatGuy1/Windows-Toasts
project_urls =
    Bug Tracker = https://github.com/DatGuy1/Windows-Toasts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
install_requires =
    winsdk
python_requires = >=3.7

[options.packages.find]
where = src